Mminor changes related to deployment

--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Pixel art editor designed to make tiled maps and tilesets." />
         <link rel="icon" href="favicon.ico" type="image/ico">
         <title>Plextus</title>
     </head>
