--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -4,11 +4,11 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Pixel art editor designed to make tiled maps and tilesets." />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>Plextus</title>
     </head>
     <body>
         <div id="root"></div>
-
         <!-- Dependencies -->
         <% if (webpackConfig.mode == 'production') { %>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.0.0/umd/react.production.min.js" integrity="sha512-bom/WJB/C/RVkBpU7ic7qopGc/CSWjj1aZhZLykucHKCZuT9h881Uh8VdvEioA6L0vQ/Tsaw1uK2Pnj312c17g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
