--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -5,13 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Pixel art editor designed to make tiled maps and tilesets." />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+        <% if (webpackConfig.mode == 'production') { %>
         <link rel="apple-touch-icon" sizes="180x180" href="/plextus/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/plextus/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/plextus/favicon-16x16.png" />
         <link rel="manifest" href="/plextus/site.webmanifest" />
         <link rel="mask-icon" href="/plextus/safari-pinned-tab.svg" color="#5bbad5" />
+        <% } else { %>
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+        <link rel="manifest" href="/site.webmanifest" />
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+        <% } %>
         <meta name="msapplication-TileColor" content="#da532c" />
-        <meta name="theme-color" content="#ffffff" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <title>Plextus</title>
     </head>
