new ESLint rules

--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -20,6 +20,8 @@
         <% } %>
         <meta name="msapplication-TileColor" content="#da532c" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="theme-color" content="#dfdfdf" media="(prefers-color-scheme: light)" />
+        <meta name="theme-color" content="#3d3d3d" media="(prefers-color-scheme: dark)" />
         <title>Plextus</title>
     </head>
     <body>
